change support box

--- a/application/modules/default/views/scripts/support/index.phtml
+++ b/application/modules/default/views/scripts/support/index.phtml
@@ -438,9 +438,9 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2>Please help us</h2>
-                    <p>Since May 2017 we support the creatives on our platform. That's why we have introduced <a id="plingListOpen" href="#">pling</a>.
+                    <p>Since 2017 we support the creatives on our platform via <a id="plingListOpen" href="#">pling</a>.
                     </p>
-                    <p>Please help us to support the creators and keep the platform growing.</p>
+                    <p>Please help us to support the creators and keep the platform growing. Your support is a one time donation and last for a full year.</p>
                     
                     <div class="tabs donation-widget ">
                     
@@ -452,7 +452,7 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                                 <div class="tabs-header non-selectable basic-color-background">
                                   <div class="header-content">
                                     <span class="display-amount">
-                                      <span class="step-1 active">Choose a amount</span>
+                                      <span class="step-1 active">Choose amount</span>
                                     </span>
                                   </div>
                                 </div>
@@ -521,9 +521,9 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                                                   <span class="unit">$</span>
                                                 </span>
                                                 <span class="amount">
-                                                  <input id="custom_amount" min="101" step="any" inputmode="numeric" type="number" name="amount_handish">
+                                                  <input id="custom_amount" min="10" step="any" inputmode="numeric" type="number" name="amount_handish">
                                                 </span>
-                                                <span class="desc">Enter a free amount > $100</span>
+                                                <span class="desc">Enter a free amount > $10</span>
                                               </span>
                                             </span>
                                           <span class="mdl-radio__outer-circle"></span><span class="mdl-radio__inner-circle"></span></label>
@@ -546,7 +546,7 @@ ul.suggested-amounts li.amount-item .mdl-radio .mdl-radio__outer-circle {
                                   <button type="submit" class="dw-btn mdl-button mdl-js-button mdl-js-ripple-effect step-3 basic-color-background" data-upgraded=",MaterialButton,MaterialRipple">
                                     <span class="donate" id="linkButton">
                                       <span class="amount">
-                                        <span isolate="">Support opendesktop.org via PayPal</span>
+                                        <span isolate="">Donate via PayPal</span>
                                       </span>
                                     </span>
                                 </div>
