--- a/application/modules/default/views/scripts/support/paymentcancel.phtml
+++ b/application/modules/default/views/scripts/support/paymentcancel.phtml
@@ -29,7 +29,7 @@
                 <div class="sidebar-left col-md-2"></div>
                 <div class="content col-md-8">
                     <h2><?= $this->paymentMessage ?></h2>
-                    <p>Your Donation was canceled. Please try again.</p>
+                    <p>Your Donation was cancelled. Please try again.</p>
                     <p><a href="/donate">Back</a></p>
                 </div>
                 <div class="sidebar-right col-md-2"></div>
