--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5444,6 +5444,14 @@ img.imgpopover
       .marginLeft80{
         margin-left: 80px;
       }
+      
+      button.voting{
+         line-height: 10px;
+      }
+      button.voting span{
+         font-size: 10px;
+      }      
+
       .rating{
         width: 60px !important;
         font-size: 10pt;
