--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -30,13 +30,14 @@
 		        		height: 17px;
 		        	}
 		        	.new-products{
+		        		padding-left: 50px;
 		        		.row
 		        		{
 		        			margin-top: 10px;
 		        		}
 		        		.rating
 		        		{
-		        		       	width:60%;
+		        		       	/*width:60%;*/
 		        		}
 		        		.time
 			    	{
@@ -69,6 +70,7 @@
 
 		        	}
 		        	.newusers{
+		        		padding-left:50px; 
 		        		.u-wrap{
 		        			float: left;
 		        			width: 100%;
