--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -30,14 +30,14 @@
 		        		height: 17px;
 		        	}
 		        	.new-products{
-		        		padding-left: 50px;
+		        		
 		        		.row
 		        		{
 		        			margin-top: 10px;
 		        		}
 		        		.rating
 		        		{
-		        		       	/*width:60%;*/
+		        		       	width:60%;
 		        		}
 		        		.time
 			    	{
