--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -87,7 +87,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 
                                    
                         </div>
-                        <div class="row ">   
+                        <div class="row blockpadding">   
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">      
                                     <span>  Icons,Cursors </span>
                                     <div class="prod-widget-box new-products" >
