--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -25,20 +25,20 @@ $this->comments = $modelInfo->getLatestComments(10);
 $this->users = $modelInfo->getNewActiveMembers(18);
 $this->supporters = $modelInfo->getNewActiveSupporters(18);
 
-// $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,"366,363,273,267,138,125,131,153");
-// $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,140,417,101,100,111");
-// $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"386,107");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
+$this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,"366,363,273,267,138,125,131,153");
+$this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,140,417,101,100,111");
+$this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"386,107");
+$this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
+$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
+$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
 //test
-$this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,7);
-$this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"3,33");
-$this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"5,7");
-$this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
+// $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,7);
+// $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"3,33");
+// $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"5,7");
+// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
+// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
+// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
 
 
 $countSupporters = $modelInfo->getCountActiveSupporters();
