--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -26,20 +26,13 @@ $this->users = $modelInfo->getNewActiveMembers(18);
 $this->supporters = $modelInfo->getNewActiveSupporters(18);
 
 $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,"366,363,273,267,138,125,131,153");
-$this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,140,417,101,100,111");
+$this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,417,101,100,111");
+$this->productsThemesBox = $modelInfo->getLastProductsForHostStores(5,"117,267,139,143,142,140,141,144");
 $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"386,107");
+$this->productsScreenshots= $modelInfo->getLastProductsForHostStores(5,225);
 $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
-
-//test
-// $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,7);
-// $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"3,33");
-// $this->productsIconsCursors= $modelInfo->getLastProductsForHostStores(5,"5,7");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
-
 
 $countSupporters = $modelInfo->getCountActiveSupporters();
 $countMembers = $modelInfo->getCountMembers();
@@ -55,148 +48,93 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 </div>
 <div class="GridFlex-cell content">   
         <div class="contentcontainer">
-                        <div class="row ">   
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">      
-                                    <span>  GTK-Theming </span>
-                                    <div class="prod-widget-box new-products" >
-                                    <?php
-                                    $this->rownum = 1; 
-                                    foreach ($this->productsThemesGTK as $this->product) {
-                                        echo $this->render('home/partials/product_plingcom.phtml');
-                                        $this->rownum++;
-                                    }           
-                                    ?>
-                                    </div>
-                                                                                                        
-                                      
-                                    </div>
+                        <div class="row">   
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "GTK-Theming",
+                                            "products" => $this->productsThemesGTK
+                                        )
+                                    );       
 
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <span>Plasma-Theming</span>                                              
-                                    <div class="prod-widget-box new-products" >
-                                    <?php
-                                    $this->rownum = 1; 
-                                    foreach ($this->productsThemesPlasma as $this->product) {
-                                        echo $this->render('home/partials/product_plingcom.phtml');
-                                        $this->rownum++;
-                                    }           
-                                    ?>
-                                    </div> 
-                                                                      
-                                    </div>
-
-                                   
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Plasma-Theming",
+                                            "products" => $this->productsThemesPlasma
+                                        )
+                                    );                                 
+                        ?>                                                      
                         </div>
+
                         <div class="row blockpadding">   
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">      
-                                    <span>  Icons,Cursors </span>
-                                    <div class="prod-widget-box new-products" >
-                                    <?php
-                                    $this->rownum = 1; 
-                                    foreach ($this->productsIconsCursors as $this->product) {
-                                        echo $this->render('home/partials/product_plingcom.phtml');
-                                        $this->rownum++;
-                                    }           
-                                    ?>
-                                    </div>                                                                                                                                              
-                                    </div>
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Box-Theming",
+                                            "products" => $this->productsThemesBox
+                                        )
+                                    );       
 
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <span>Wallpapers</span>                                              
-                                    <div class="prod-widget-box new-products" >
-                                    <?php
-                                    $this->rownum = 1; 
-                                    foreach ($this->productsWallpapers as $this->product) {
-                                        echo $this->render('home/partials/product_plingcom.phtml');
-                                        $this->rownum++;
-                                    }           
-                                    ?>
-                                    </div> 
-                                                                      
-                                    </div>
-                                    
-                        </div>
-                        <div class="row blockpadding" >
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                          
-                                      <span>Add-Ons</span>                                         
-                                      <div class="prod-widget-box new-products" >
-                                      <?php
-                                      $this->rownum = 1; 
-                                      foreach ($this->productsAddons as $this->product) {
-                                          echo $this->render('home/partials/product_plingcom.phtml');
-                                          $this->rownum++;
-                                      }           
-                                      ?>                                        
-                                     </div>                                       
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                            
-                                               <span> Apps </span>                                               
-                                               <div class="prod-widget-box new-products" >
-                                               <?php
-                                               $this->rownum = 1; 
-                                               foreach ($this->productsApps as $this->product) {
-                                                   echo $this->render('home/partials/product_plingcom.phtml');
-                                                   $this->rownum++;
-                                               }           
-                                               ?>                                              
-                                                </div>
-                                    </div>                        
-                        </div>
-
-                        <div class="row blockpadding supportersrow">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <span class="labelTitle" >Latest  Active Supporters  </span>                                                                         
-                                    <div class="newusers">
-                                         <?php 
-                                        foreach ($this->supporters as $user) {                                  
-                                            ?>
-                                                <div class="user " >
-                                                    <div class="u-wrap">
-                                                        <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($user['member_id']); ?>">
-                                                            <figure >
-                                                                <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
-                                                            </figure>
-                                                            <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
-                                                        </a>
-                                                         <span class="small"><?= $helpPrintDate->printDate($user['created_at'])?></span>
-                                                    </div>
-                                                </div>
-                                        <?php } ?>
-
-                                        <div class="clearboth"></div> 
-
-                                    </div>
-                        </div>
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Icons,Cursors",
+                                            "products" => $this->productsIconsCursors
+                                        )
+                                    );                                 
+                        ?>                                                                                                                        
                         </div>
 
                         <div class="row blockpadding">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <span class="labelTitle" >Latest  Community Members   </span>                                                                         
-                                    <div class="newusers">
-                                         <?php 
-                                        foreach ($this->users as $user) {                                  
-                                            ?>
-                                                <div class="user " >
-                                                    <div class="u-wrap">
-                                                        <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($user['member_id']); ?>">
-                                                            <figure >
-                                                                <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
-                                                            </figure>
-                                                            <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
-                                                        </a>
-                                                         <span class="small"><?= $helpPrintDate->printDate($user['created_at'])?></span>
-                                                    </div>
-                                                </div>
-                                        <?php } ?>
+                        <?php                                 
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Wallpapers",
+                                            "products" => $this->productsWallpapers
+                                        )
+                                    );       
 
-                                        <div class="clearboth"></div> 
-
-                                    </div>
+                                    echo $this->partial('/home/partials/product_group.phtml', array(
+                                            "title"  => "Screenshots",
+                                            "products" => $this->productsScreenshots
+                                        )
+                                    );                                 
+                        ?>                                                                                                          
                         </div>
+                        <div class="row blockpadding" >
+                         <?php                                 
+                                     echo $this->partial('/home/partials/product_group.phtml', array(
+                                             "title"  => "Add-Ons",
+                                             "products" => $this->productsAddons
+                                         )
+                                     );       
+
+                                     echo $this->partial('/home/partials/product_group.phtml', array(
+                                             "title"  => "Apps",
+                                             "products" => $this->productsApps
+                                         )
+                                     );                                 
+                         ?>                                         
                         </div>
 
-                        
-</div>
+                        <div class="row blockpadding supportersrow">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <?php                                 
+                                        echo $this->partial('/home/partials/users.phtml', array(
+                                                "title"  => "Latest  Active Supporters",
+                                                "users" => $this->supporters
+                                            )
+                                        );                   
+                            ?>                                                              
+                            </div>
+                        </div>
+
+                        <div class="row blockpadding">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <?php                                 
+                                        echo $this->partial('/home/partials/users.phtml', array(
+                                                "title"  => "Latest  Community Members ",
+                                                "users" => $this->users
+                                            )
+                                        );                   
+                            ?>                                               
+                            </div>
+                        </div>                        
+             </div>
 </div>
 <div class="GridFlex-cell sidebar-right">   
         <aside  id="explore-sidebar" >     
