--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1687,28 +1687,33 @@ ul.meta-nav-top
           z-index: 100
         }
         div.projectdtailHeart{
-          float: right; 
-          width:50px;
-          z-index: 100
+            float: right;           
+            z-index: 100;
+            margin-right: 10px;
         }
-        span.heartproject{
+        .heartproject{
           position:relative;
           color:#8e44ad; 
-          font-size: 45px
+          font-size: 30px;
         }
 
         .heartgrey{
           position:relative;
           color:#C8C8C8; 
-          font-size: 45px
+          font-size: 30px;
         }
+       
 
         span.heartnumber{
           z-index: 3;
           position: absolute; 
-          margin-left:-25px;
-          margin-top:12px;
+          margin-left:-20px;
+          margin-top:5px;
           color:white;
+        }
+
+        span.heartnumberpurple{
+           color: #8e44ad; 
         }
       }
     }
